--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.3
 decorator==3.4.2
 Flask==0.10.1
 Flask-Bootstrap==3.3.2.1
+Flask-JqueryUiBootstrap==0.5.0.4
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Migrate==1.3.1
@@ -18,8 +19,10 @@ Jinja2==2.7.3
 Mako==1.0.1
 MarkupSafe==0.23
 passlib==1.6.2
+psycopg2==2.6
 six==1.9.0
 SQLAlchemy==0.9.9
+SQLAlchemy-Defaults==0.4.4
 SQLAlchemy-Utils==0.29.8
 validate-email==1.3
 validators==0.7
