--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.7.5.post2
+aniso8601==0.92
 blinker==1.3
 decorator==3.4.2
 Flask==0.10.1
@@ -8,6 +9,8 @@ Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Migrate==1.3.1
 Flask-Principal==0.4.0
+Flask-RESTful==0.3.2
+flask-restplus==0.7.1
 Flask-Script==2.0.5
 Flask-Security==1.7.4
 Flask-SQLAlchemy==2.0
@@ -20,6 +23,7 @@ Mako==1.0.1
 MarkupSafe==0.23
 passlib==1.6.2
 psycopg2==2.6
+pytz==2015.2
 six==1.9.0
 SQLAlchemy==0.9.9
 SQLAlchemy-Defaults==0.4.4
