--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Migrate==1.3.1
 Flask-Principal==0.4.0
+Flask-Redis==0.1.0
 Flask-RESTful==0.3.2
 flask-restplus==0.7.1
 Flask-Script==2.0.5
@@ -24,6 +25,7 @@ MarkupSafe==0.23
 passlib==1.6.2
 psycopg2==2.6
 pytz==2015.2
+redis==2.10.3
 six==1.9.0
 SQLAlchemy==0.9.9
 SQLAlchemy-Defaults==0.4.4
