--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==0.7.5.post2
 aniso8601==0.92
 blinker==1.3
+colorama==0.3.3
 decorator==3.4.2
 Flask==0.10.1
 Flask-Bootstrap==3.3.2.1
@@ -15,6 +16,7 @@ flask-restplus==0.7.1
 Flask-Script==2.0.5
 Flask-Security==1.7.4
 Flask-SQLAlchemy==2.0
+Flask-Testing==0.4.2
 Flask-WTF==0.11
 infinity==1.3
 intervals==0.3.1
@@ -22,8 +24,11 @@ itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.1
 MarkupSafe==0.23
+mock==1.0.1
+nose==1.3.6
 passlib==1.6.2
 psycopg2==2.6
+python-termstyle==0.1.10
 pytz==2015.2
 redis==2.10.3
 requests==2.6.2
