--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.7.5.post2
 aniso8601==0.92
 blinker==1.3
 colorama==0.3.3
+dbgp==1.1
 decorator==3.4.2
 Flask==0.10.1
 Flask-Bootstrap==3.3.2.1
@@ -29,6 +30,7 @@ nose==1.3.6
 parse==1.6.6
 passlib==1.6.2
 psycopg2==2.6
+py-bcrypt==0.4
 python-termstyle==0.1.10
 pytz==2015.2
 redis==2.10.3
