--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-Script==2.0.5
 Flask-Security==1.7.4
 Flask-SQLAlchemy==2.0
 Flask-Testing==0.4.2
+Flask-Uploads==0.1.3
 Flask-WTF==0.11
 infinity==1.3
 intervals==0.3.1
@@ -29,6 +30,7 @@ mock==1.0.1
 nose==1.3.6
 parse==1.6.6
 passlib==1.6.2
+Pillow==2.8.1
 psycopg2==2.6
 py-bcrypt==0.4
 python-termstyle==0.1.10
@@ -36,12 +38,13 @@ pytz==2015.2
 redis==2.10.3
 requests==2.6.2
 six==1.9.0
+slacker==0.6.2
 SQLAlchemy==0.9.9
 SQLAlchemy-Defaults==0.4.4
 SQLAlchemy-Utils==0.29.8
 validate-email==1.3
 validators==0.7
-Werkzeug==0.10.1
+Werkzeug==0.10.4
 WTForms==2.0.2
 WTForms-Alchemy==0.13.0
 WTForms-Components==0.9.7
