--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ python-termstyle==0.1.10
 pytz==2015.2
 redis==2.10.3
 requests==2.6.2
+Rtree==0.8.2
 six==1.9.0
 slacker==0.6.2
 SQLAlchemy==0.9.9
