--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ Flask-SQLAlchemy==2.0
 Flask-Testing==0.4.2
 Flask-Uploads==0.1.3
 Flask-WTF==0.11
+GeoAlchemy2==0.2.5
+geojson==1.2.0
 infinity==1.3
 intervals==0.3.1
 itsdangerous==0.24
@@ -38,6 +40,7 @@ pytz==2015.2
 redis==2.10.3
 requests==2.6.2
 Rtree==0.8.2
+Shapely==1.5.9
 six==1.9.0
 slacker==0.6.2
 SQLAlchemy==0.9.9
