--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dbgp==1.1
 decorator==3.4.2
 Flask==0.10.1
 Flask-Bootstrap==3.3.2.1
+Flask-Cors==2.0.1
 Flask-JqueryUiBootstrap==0.5.0.4
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
