--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
 alembic==0.7.5.post2
-aniso8601==0.92
+aniso8601==1.0.0
 blinker==1.3
 colorama==0.3.3
 dbgp==1.1
 decorator==3.4.2
+dogpile==0.2.2
+dogpile.cache==0.5.6
+dogpile.core==0.4.1
 Flask==0.10.1
 Flask-Bootstrap==3.3.2.1
 Flask-Cors==2.0.1
+Flask-Dogpile-Cache==0.2
 Flask-JqueryUiBootstrap==0.5.0.4
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Migrate==1.3.1
 Flask-Principal==0.4.0
 Flask-Redis==0.1.0
-Flask-RESTful==0.3.2
+Flask-RESTful==0.3.3
 flask-restplus==0.7.1
 Flask-Script==2.0.5
 Flask-Security==1.7.4
@@ -36,8 +40,9 @@ passlib==1.6.2
 Pillow==2.8.1
 psycopg2==2.6
 py-bcrypt==0.4
+python-memcached==1.54
 python-termstyle==0.1.10
-pytz==2015.2
+pytz==2015.4
 redis==2.10.3
 requests==2.6.2
 Rtree==0.8.2
