--- a/requirements.txt
+++ b/requirements.txt
@@ -22,21 +22,25 @@ Flask-Mail==0.9.1
 Flask-Migrate==1.3.1
 Flask-Principal==0.4.0
 Flask-Redis==0.1.0
-Flask-RESTful==0.3.3
-flask-restplus==0.7.1
+Flask-RESTful==0.3.4
+flask-restplus==0.7.2
 Flask-Script==2.0.5
 Flask-Security==1.7.4
 Flask-SQLAlchemy==2.0
 Flask-Testing==0.4.2
 Flask-Uploads==0.1.3
 Flask-WTF==0.11
+functools32==3.2.3.post2
 GeoAlchemy2==0.2.5
 geojson==1.2.0
 infinity==1.3
 influxdb==2.8.0
 intervals==0.3.1
+ipython==4.0.0
+ipython-genutils==0.1.0
 itsdangerous==0.24
-Jinja2==2.7.3
+Jinja2==2.8
+jsonschema==2.5.1
 kombu==3.0.26
 Mako==1.0.1
 MarkupSafe==0.23
@@ -44,6 +48,9 @@ mock==1.0.1
 nose==1.3.6
 parse==1.6.6
 passlib==1.6.2
+path.py==8.1.1
+pexpect==3.3
+pickleshare==0.5
 Pillow==2.8.1
 psycopg2==2.6
 py-bcrypt==0.4
@@ -56,11 +63,13 @@ requests==2.6.2
 Rtree==0.8.2
 Shapely==1.5.9
 shortuuid==0.4.2
+simplegeneric==0.8.1
 six==1.9.0
 slacker==0.6.2
 SQLAlchemy==0.9.9
 SQLAlchemy-Defaults==0.4.4
 SQLAlchemy-Utils==0.29.8
+traitlets==4.0.0
 txAMQP==0.6.2
 validate-email==1.3
 validators==0.7
