--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,8 @@ machine:
         - postgresql
     pre:
         - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 10
+        - sudo apt-get install autoconf-archive automake-1.14 autoconf2.59 build-essential check
+
 
 checkout:
     post:
