--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,6 @@ machine:
 checkout:
     post:
         - git clone https://github.com/openmaraude/GeoTaxi
-        - cd GeoTaxi/src && make && cd ../..
+        - cd GeoTaxi/src && mkdir obj && make && cd ../..
         - git clone https://github.com/mattsta/redis/tree/dynamic-redis-2.8
         - cd dynamic-redis-2.8 && make && cd ..
