--- a/circle.yml
+++ b/circle.yml
@@ -7,10 +7,10 @@ machine:
         - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 10
         - sudo apt-get install autoconf-archive automake-1.14 autoconf2.59 build-essential check
 
-
 checkout:
-    post:
+    pre:
         - git clone https://github.com/openmaraude/GeoTaxi
         - cd GeoTaxi/src && mkdir obj && make && cd ../..
-        - git clone https://github.com/mattsta/redis/tree/dynamic-redis-2.8
-        - cd dynamic-redis-2.8 && make && cd ..
+        - git clone https://github.com/mattsta/redis/
+        - cd redis && git checkout dynamic-redis-2.8 && make && cd ..
+        - git clone https://github.com/mattsta/krmt && cd krmt && make
