--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ Flask-Login==0.2.11
 Flask-Mail==0.9.1
 Flask-Migrate==1.3.1
 Flask-Principal==0.4.0
-Flask-Redis>=0.0.6
+Flask-Redis==0.1.0
 Flask-RESTful==0.3.4
 flask-restplus==0.7.2
 Flask-Script==2.0.5
