--- a/circle.yml
+++ b/circle.yml
@@ -9,10 +9,8 @@ machine:
 
 checkout:
     pre:
-        - git clone https://github.com/openmaraude/faker
+        - git clone https://github.com/openmaraude/faker && cd faker && go build && cd ..
         - git clone https://github.com/openmaraude/minimal_operateur_server
-    post:
-        - cd faker && go build && cd ..
 
 dependencies:
     pre:
