Load configuration from environment variables

--- a/circle.yml
+++ b/circle.yml
@@ -34,4 +34,4 @@ test:
         - ./faker/faker:
             background: true
     override:
-        - APITAXI_CONFIG_FILE=circle_settings.py nosetests tests
+        - nosetests tests
