--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ Flask-Migrate==1.3.1
 Flask-Principal==0.4.0
 Flask-Redis==0.1.0
 Flask-RESTful==0.3.4
-flask-restplus==0.7.2
+git+https://github.com/noirbizarre/flask-restplus.git@master
 Flask-Script==2.0.5
 Flask-Security==1.7.4
 Flask-SQLAlchemy==2.0
