--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ Flask-WTF==0.11
 functools32==3.2.3.post2
 GeoAlchemy2==0.2.5
 geojson==1.2.0
+geopy==1.11.0
 infinity==1.3
 influxdb==2.8.0
 intervals==0.3.1
