--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ machine:
         SQLALCHEMY_DATABASE_URI: 'postgresql://ubuntu:@127.0.0.1:5432/circle_test'
         REDIS_URL: "redis://:@localhost:7777/0"
         SECURITY_PASSWORD_HASH: 'plaintext'
-        NOW: 'time_test'
+        APITAXI_CONFIG_FILE: 'test_settings.py'
 
 dependencies:
     pre:
