--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
         - postgresql
     pre:
         - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 10
-        - sudo apt-get install autoconf-archive automake-1.14 autoconf2.59 build-essential check libspatialindex-dev
+        - sudo apt-get install autoconf-archive automake-1.14 autoconf2.59 build-essential check libspatialindex-dev libhiredis-dev
     environment:
         SQLALCHEMY_DATABASE_URI: 'postgresql://ubuntu:@127.0.0.1:5432/circle_test'
         REDIS_URL: "redis://:@localhost:7777/0"
