--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ Pillow==3.0.0
 psycopg2==2.6.1
 ptyprocess==0.5
 py-bcrypt==0.4
+pyshp==1.2.3
 python-dateutil==2.4.2
 python-editor==0.5
 python-memcached==1.57
