--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ functools32==3.2.3.post2
 GeoAlchemy2==0.2.6
 geojson==1.3.1
 geopy==1.11.0
+hiredis==0.2.0
 infinity==1.3
 influxdb==2.10.0
 intervals==0.3.1
