--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,16 @@
--e git://github.com/openmaraude/APITaxi_utils.git@96b508646f44552e577f0dc212780fd50d2140bf#egg=APITaxi_utils
--e git://github.com/openmaraude/APITaxi_models.git@f1b4aa8a830df19f57d8278b80127325d85d1afa#egg=APITaxi_models
-alembic==0.8.4
-amqp==1.4.8
-aniso8601==1.1.0
-anyjson==0.3.3
-billiard==3.3.0.22
-blinker==1.4
-celery==3.1.19
-colorama==0.3.5
-dbgp==1.1
-decorator==4.0.6
-dogpile==0.2.2
-dogpile.cache==0.5.7
-dogpile.core==0.4.1
-dominate==2.1.16
-Flask==0.10.1
+Cython==0.23.4
+-e git://github.com/openmaraude/APITaxi_utils.git@06b656d0fcddaa9b769637ef0e97a214396329ef#egg=APITaxi_utils
+-e git://github.com/openmaraude/APITaxi_models.git@f13f7be82cbab8741f26d40b78fc57eb33e4dcc9#egg=APITaxi_models
+nose==1.3.7
+Flask-Testing==0.4.2
+Flask-Dogpile-Cache==0.2
+Flask-Redis==0.3.0
 Flask-Celery-Helper==1.1.0
 Flask-Cors==2.1.2
-Flask-Dogpile-Cache==0.2
-Flask-JqueryUiBootstrap==0.5.0.4
-Flask-Login==0.3.2
-Flask-Mail==0.9.1
-Flask-Migrate==1.6.0
-Flask-Principal==0.4.0
-Flask-Redis==0.1.0
-Flask-RESTful==0.3.5
-flask-restplus==0.8.5
-Flask-Script==2.0.5
-Flask-Security==1.7.5
-Flask-SQLAlchemy==2.1
-Flask-Testing==0.4.2
-Flask-Uploads==0.1.3
-Flask-WTF==0.12
-funcsigs==0.4
-functools32==3.2.3.post2
-GeoAlchemy2==0.2.6
-geojson==1.3.1
-geopy==1.11.0
-hiredis==0.2.0
-infinity==1.3
-influxdb==2.10.0
-intervals==0.3.1
-ipython==4.0.1
-ipython-genutils==0.1.0
-itsdangerous==0.24
-Jinja2==2.8
-jsonrpcparts==0.3.7
-jsonschema==2.5.1
-kombu==3.0.32
-Mako==1.0.3
-MarkupSafe==0.23
-mock==1.3.0
-msgpack-python==0.4.6
-nose==1.3.7
-parse==1.6.6
-passlib==1.6.5
-path.py==8.1.2
-pbr==1.8.1
-pexpect==4.0.1
-pickleshare==0.5
-Pillow==3.0.0
 psycopg2==2.6.1
-ptyprocess==0.5
-py-bcrypt==0.4
-pyshp==1.2.3
-python-dateutil==2.4.2
-python-editor==0.5
-python-memcached==1.57
-python-termstyle==0.1.10
-pytz==2015.7
-redis==2.10.5
-requests==2.9.0
-Rtree==0.8.2
-Shapely==1.5.13
 shortuuid==0.4.2
-simplegeneric==0.8.1
-six==1.10.0
-slacker==0.8.6
-SQLAlchemy==1.0.10
-SQLAlchemy-Defaults==0.4.4
-SQLAlchemy-Utils==0.31.4
-traitlets==4.0.0
-Twisted==15.5.0
-txAMQP==0.6.2
-ultrajson==1.35
-validate-email==1.3
-validators==0.9
-visitor==0.1.2
-Werkzeug==0.11.2
-WTForms==2.1
-WTForms-Alchemy==0.13.3
-WTForms-Components==0.9.8
-WTForms-JSON==0.2.10
-zope.interface==4.1.3
+parse==1.6.6
+geopy==1.11.0
+Flask-Uploads==0.2.1
+Flask-Script==2.0.5
+Flask-Migrate==1.8.1
