--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask-Dogpile-Cache==0.2
 Flask-Redis==0.3.0
 Flask-Celery-Helper==1.1.0
 Flask-Cors==2.1.2
-psycopg2==2.7.4
+psycopg2-binary==2.7.4
 geopy==1.11.0
 Flask-Uploads==0.2.1
 Flask-Script==2.0.5
@@ -16,3 +16,4 @@ Shapely==1.5.13
 pyshp==1.2.3
 bcrypt
 Geohash
+redis==2.10.6
