--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Cython==0.23.4
+enum34
 -e git://github.com/openmaraude/APITaxi_utils.git@c8d00c5cbb60db70d5cce70c36340d7d9c9ed0d8#egg=APITaxi_utils
 -e git://github.com/openmaraude/APITaxi_models.git@ed68b8520ffaa58f77f7b01849e61b36d07ab3ee#egg=APITaxi_models
 nose==1.3.7
