--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 Cython==0.23.4
 enum34
--e git://github.com/openmaraude/APITaxi_utils.git@c8d00c5cbb60db70d5cce70c36340d7d9c9ed0d8#egg=APITaxi_utils
--e git://github.com/openmaraude/APITaxi_models.git@ed68b8520ffaa58f77f7b01849e61b36d07ab3ee#egg=APITaxi_models
+-e git://github.com/openmaraude/APITaxi_utils.git@2a0a202754a6128a625cdfb2936844fea0ed3e2b#egg=APITaxi_utils
+-e git://github.com/openmaraude/APITaxi_models.git@c843661711496de1a2f053d054aa790364a3eb9c#egg=APITaxi_models
 nose==1.3.7
-Flask-Testing==0.4.2
+Flask-Testing==0.7.1
 Flask-Redis==0.3.0
 Flask-Celery-Helper==1.1.0
-Flask-Cors==2.1.2
-psycopg2-binary==2.7.4
-geopy==1.11.0
+Flask-Cors==3.0.6
+psycopg2-binary==2.7.5
+geopy==1.16.0
 Flask-Uploads==0.2.1
-Flask-Script==2.0.5
-Flask-Migrate==1.8.1
+Flask-Script==2.0.6
+Flask-Migrate==2.2.1
 Shapely==1.5.16
-pyshp==1.2.3
-bcrypt
-Geohash
+pyshp==1.2.12
+bcrypt==3.1.4
+Geohash==1.0
 redis==2.10.6
