--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
                 name: Launch minimal operateur server
                 command: |
                     . venv/bin/activate
+                    pip install -r minimal_operateur_server/requirements.txt
                     python minimal_operateur_server/api.py
                 background: true
             - run:
@@ -47,3 +48,9 @@ jobs:
                 command: |
                     . venv/bin/activate
                     nosetests --stop
+workflows:
+  version: 2
+  transport:
+    jobs:
+      - build
+
