--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,9 @@ jobs:
                     mkdir -p ./venv
                     virtualenv ./venv
                     . venv/bin/activate
-                    pip install -r requirements.txt
+                    pip install git+https://github.com/openmaraude/APITaxi_utils.git
+                    pip install git+https://github.com/openmaraude/APITaxi_models.git
+                    pip install .
             - run:
                 name: Fake positions
                 command: ./faker/faker
