--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
                     mkdir -p ./venv
                     virtualenv ./venv
                     . venv/bin/activate
-                    pip install -r requirements.txt
+                    pip install .
             - run:
                 name: Fake positions
                 command: ./faker/faker
