--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             virtualenv ./venv
             . venv/bin/activate
             pip install git+https://github.com/openmaraude/APITaxi_utils.git
-            pip install git+https://github.com/openmaraude/APITaxi_models.git@v2
+            pip install git+https://github.com/openmaraude/APITaxi_models.git
             pip install .
       - run:
           name: Fake positions
