--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
             pip install git+https://github.com/openmaraude/APITaxi_models.git
             pip install .
             pip install .[tests]
+            pip list
       - run:
           name: Fake positions
           command: ./faker/faker
