tox.ini: better doc

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py3
 deps =
     git+https://github.com/openmaraude/APITaxi_models.git
 
-# pip install .[extras]
+# pip install .[tests]
 extras =
     tests
 
