migrations: exclude system tables
This spatial_ref_sys table is created by the Postgis extension, just
ignore it.

--- a/APITaxi_models2/alembic.ini
+++ b/APITaxi_models2/alembic.ini
@@ -38,6 +38,10 @@ file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d:%%(minute).2d:%%(sec
 
 sqlalchemy.url = driver://user:pass@localhost/dbname
 
+# Prevent alembic from fiddling with system objects
+[alembic:exclude]
+tables = spatial_ref_sys
+
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
