--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ jobs:
             docker build --target devenv -t openmaraude/api_taxi-devenv:${CIRCLE_TAG} .
             docker tag openmaraude/api_taxi-devenv:${CIRCLE_TAG} openmaraude/api_taxi-devenv:latest
 
+            docker build --target worker-devenv -t openmaraude/api_taxi-worker-devenv:${CIRCLE_TAG} .
+            docker tag openmaraude/api_taxi-worker-devenv:${CIRCLE_TAG} openmaraude/api_taxi-worker-devenv:latest
+
             docker build -t openmaraude/api_taxi:${CIRCLE_TAG} .
             docker tag openmaraude/api_taxi:${CIRCLE_TAG} openmaraude/api_taxi:latest
       - run:
@@ -37,6 +40,9 @@ jobs:
 
             docker push openmaraude/api_taxi-devenv:${CIRCLE_TAG}
             docker push openmaraude/api_taxi-devenv:latest
+
+            docker push openmaraude/api_taxi-worker-devenv:${CIRCLE_TAG}
+            docker push openmaraude/api_taxi-worker-devenv:latest
 
             docker push openmaraude/api_taxi:${CIRCLE_TAG}
             docker push openmaraude/api_taxi:latest
