--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,8 @@ jobs:
       - run:
           name: Install system dependencies
           command: |
-            sudo apt-get install -y postgis redis-server influxdb
+            sudo apt update
+            sudo apt install -y postgis redis-server influxdb
             pip install tox
       - run:
           name: Run unittests
