Use --http instead of --http-socket

--- a/deploy/conf/uwsgi.ini
+++ b/deploy/conf/uwsgi.ini
@@ -4,7 +4,8 @@ master = true
 processes = 2
 plugin = python3
 module = APITaxi:create_app()
-http-socket = 0.0.0.0:5000
+
+http = 0.0.0.0:5000
 stats = 0.0.0.0:5007 --stats-http
 
 # Required to handle long URLs
