Fix path to uwsgi

--- a/deploy/supervisor/api.conf
+++ b/deploy/supervisor/api.conf
@@ -2,7 +2,7 @@
 
 user = api
 group = api
-command = /usr/bin/uwsgi /etc/api-taxi/uwsgi.ini
+command = /usr/local/bin/uwsgi /etc/api-taxi/uwsgi.ini
 autostart = true
 autorestart = true
 stderr_logfile = /var/log/supervisor/api.err.log
