Set http-manage-expect to handle Expect HTTP header
If we don't set this value in uwsgi.ini, Expect header generates long
requests.

--- a/deploy/conf/uwsgi.ini
+++ b/deploy/conf/uwsgi.ini
@@ -6,6 +6,14 @@ plugin = python3
 module = APITaxi:create_app()
 
 http = 0.0.0.0:5000
+
+# If we don't set this variable, the following request takes several seconds:
+#
+# curl https://dev.api.taxi/taxis -d '{}' -H 'Content-Type: application/json' -H 'Expect: 100-continue
+#
+# See https://github.com/unbit/uwsgi/issues/2129
+http-manage-expect = 1
+
 stats = 0.0.0.0:5007 --stats-http
 
 # Required to handle long URLs
