--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: circleci/python:3-buster
+      - image: circleci/python:3-bullseye
     steps:
       - checkout
       - run:
