big dependency upgrade!
- Flask 2.3
- Flask-SqlAlchemy 3.0.3
- Flask-Security replaced by Flask-Security-Too (but Flask-HTTPAuth used
  until I figure out their token thing)
- Werkzeug 2.3

I tried to follow the latest recommendations and patterns, but some duct
tape and wire coat hanger were used to make tests pass.

The only upgrade left is SQLALchemy 2.

--- a/deploy/supervisor/worker-beat.conf
+++ b/deploy/supervisor/worker-beat.conf
@@ -1,7 +1,7 @@
 [program:worker-beat]
 
 user = api
-command = /usr/local/bin/celery --app=APITaxi2.celery_worker.celery beat --pidfile=/tmp/celery-beat.pid -s /tmp/celerybeat-schedule
+command = /usr/local/bin/celery --app=APITaxi2.celery_worker beat --pidfile=/tmp/celery-beat.pid -s /tmp/celerybeat-schedule
 autostart = true
 autorestart = true
 stderr_logfile = /var/log/supervisor/worker-beat.err.log
