--- a/deploy/supervisor/worker.conf
+++ b/deploy/supervisor/worker.conf
@@ -1,7 +1,7 @@
 [program:worker]
 
 user = api
-command = /usr/local/bin/celery --app=APITaxi2.celery_worker.celery worker --pidfile=/tmp/celery.pid -n api_taxi_worker -E
+command = /usr/local/bin/celery --app=APITaxi2.celery_worker worker --pidfile=/tmp/celery.pid -n api_taxi_worker -E
 autostart = true
 autorestart = true
 stderr_logfile = /var/log/supervisor/worker.err.log
