keep uwsgi logs to stdout

--- a/deploy/supervisor/api.conf
+++ b/deploy/supervisor/api.conf
@@ -8,3 +8,4 @@ autorestart = true
 stderr_logfile = /var/log/supervisor/api.err.log
 stdout_logfile = /var/log/supervisor/api.out.log
 stopsignal = INT
+redirect_stderr = true
