--- a/deploy/supervisor/worker-beat.conf
+++ b/deploy/supervisor/worker-beat.conf
@@ -7,3 +7,4 @@ autorestart = true
 stderr_logfile = /var/log/supervisor/worker-beat.err.log
 stdout_logfile = /var/log/supervisor/worker-beat.out.log
 stopsignal = INT
+redirect_stderr = true
