--- a/deploy/supervisor/worker.conf
+++ b/deploy/supervisor/worker.conf
@@ -7,3 +7,4 @@ autorestart = true
 stderr_logfile = /var/log/supervisor/worker.err.log
 stdout_logfile = /var/log/supervisor/worker.out.log
 stopsignal = INT
+redirect_stderr = true
