log real IP and api key to identify the user
We just get the load balancer IP otherwise, and REMOTE_USER is obviously
empty.

--- a/deploy/conf/uwsgi.ini
+++ b/deploy/conf/uwsgi.ini
@@ -30,3 +30,5 @@ disable-write-exception
 #   cause issues with the transport you are trying to use.  Please enable
 #   threading for uwsgi.  (Add the "enable-threads" flag).
 enable-threads
+
+log-format = [pid: %(pid)] %(var.HTTP_X_FORWARDED_FOR) (%(var.HTTP_X_API_KEY)) {%(vars) vars in %(pktsize) bytes} [%(ctime)] %(method) %(uri) => generated %(rsize) bytes in %(msecs) msecs (%(proto) %(status)) %(headers) headers in %(hsize) bytes (%(switches) switches on core %(core))
