--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-SQLAlchemy==3.1.1
 GeoAlchemy2==0.17.1
 geopy==2.4.1
 hiredis==3.1.0
+marshmallow<4.0.0  # breaking changes
 numpy>=1.26,<2.0.0  # breaking changes
 openapi-spec-validator==0.7.1
 prettytable==3.16.0
